Fixed layout issues

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,13 +1,13 @@
 /* main.css */
 
 body {
-  align-items  : center;
-  display      : grid;
-  font-family  : sans-serif;
+  align-items: center;
+  display: grid;
+  font-family: sans-serif;
   font-size: 20px;
-  height       : 95vh;
+  height: 95vh;
   justify-items: center;
-  width        : 98%;
+  width: 98%;
 }
 
 fieldset {
@@ -15,7 +15,7 @@ fieldset {
 }
 
 h1 {
-  margin    : 0;
+  margin: 0;
   text-align: center;
 }
 
@@ -25,41 +25,41 @@ input[type="number"] {
 }
 
 main {
-  display      : grid;
-  height       : 100%;
+  display: grid;
+  height: 100%;
   justify-items: center;
-  max-height   : 600px;
-  max-width    : 500px;
-  width        : 100%;
+  max-height: 600px;
+  max-width: 500px;
+  width: 100%;
 }
 
 #audio-selection {
-  align-items        : center;
-  display            : grid;
-  grid-template-areas: 'air car';
-  justify-items      : center;
+  align-items: center;
+  display: grid;
+  grid-template-areas: "air car";
+  justify-items: center;
 }
 
 #honk-btn {
-  background-color: #DDD;
-  border          : none;
-  border-radius   : 5px;
-  height          : 35px;
-  margin          : 20px auto 0 auto;
-  transition      : 0.1s ease all;
-  width           : 100px;
+  background-color: #ddd;
+  border: none;
+  border-radius: 5px;
+  height: 35px;
+  margin: 20px auto 0 auto;
+  transition: 0.1s ease all;
+  width: 100px;
 }
 
 #honk-btn:hover {
-  cursor          : pointer;
-  background-color: #AAA;
-  transition      : 0.1s ease all;
+  cursor: pointer;
+  background-color: #aaa;
+  transition: 0.1s ease all;
 }
 
 #honk-btn-container {
-  display      : grid;
+  display: grid;
   justify-items: center;
-  width        : 100%;
+  width: 100%;
 }
 
 #radio-air-horn-container {
@@ -68,26 +68,27 @@ main {
 
 #sound-image {
   max-width: 200px;
-  padding  : 30px 0;
-  width    : 80%;
+  padding: 30px 0;
+  width: 80%;
 }
 
-#volume-controls {
-  align-items  : center;
-  display      : grid;
-  column-gap   : 10px;
+#volume-grid-container {
+  align-items: center;
+  display: grid;
+  column-gap: 10px;
   justify-items: center;
   grid-template-areas:
-    'text image input'
+    'title image input'
     'slider slider slider';
-  grid-template-rows: 1fr 1fr;
+  row-gap: 20px;
 }
 
 #volume-image {
-  justify-self: flex-start; 
-  max-width    : 40px;
+  justify-self: center;
+  justify-self: flex-start;
+  max-width: 40px;
   padding-right: 20px;
-  width        : 100%;
+  width: 100%;
 }
 
 #volume-slider {
